# dora_ros2_ws_cpp

./: .gitignore  .gitmodules  CoordSenderV2.py  README.md  ROS.gitignore  dora_launch.sh  kinematics.ipynb
D.O.R.A. Car/src/: Car.cpp  Car.h  Comunicator.cpp  Wheel.cpp  Wheel.h  main.cpp
arduino/: 2motorswPID.cpp
arduino/D.O.R.A. Car/: platformio.ini
arduino/D.O.R.A. Car/src/: Car.cpp  Car.h  Communicator.cpp  Communicator.h  Comunicator.h  Wheel.cpp  Wheel.h  WheelVelocities.h  main.cpp
arduino/DORA test drive/: platformio.ini
arduino/DORA test drive/src/: main.cpp
encoder_odometry/: setup.py
encoder_odometry/encoder_odometry/: encoder_to_odom.py
encoder_odometry/install/: local_setup.sh  setup.sh
encoder_odometry/launch/: robot_launch.py
encoder_odometrytest/: setup.cfg
robot_ws/: .gitignore  dora_launch.sh  dora_launch.sh.save  serial_stuff.py
robot_ws/install/: local_setup.sh  setup.sh
robot_ws/log/: latest_build
robot_ws/src/dora_interfaces/: CMakeLists.txt  package.xml
robot_ws/src/dora_interfaces/action/: WheelVelCalc.action
robot_ws/src/dora_interfaces/msg/: WheelVel.msg  (+1 more)
robot_ws/src/dora_odom_publisher/: package.xml  setup.cfg  setup.py
robot_ws/src/dora_odom_publisher/dora_odom_publisher/: dora_odom_publisher.py
robot_ws/src/dora_robot/: package.xml  setup.cfg  setup.py
robot_ws/src/dora_robot_control/: package.xml  setup.cfg  setup.py
robot_ws/src/encoder_odometry/: package.xml
robot_ws/src/encoder_odometrytest/: setup.py
robot_ws/src/log/: latest_build
robot_ws/src/mecanum_controller/: setup.py
robot_ws/src/py_pubsub/: package.xml  setup.py
robot_ws/src/serial_coms/: setup.py
robot_ws/src/velocity_controller/: setup.py
robot_ws/src/wheel_controller/: package.xml  setup.py
robot_ws/src/wheel_controller/wheel_controller/: wheel_controller.py
wheel_controller/wheel_controller/: wheel_controller.py
(+58 files in other folders)
