<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dora_odom_publisher</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="m.azaimi@student.avans.nl">moustapha</maintainer>
  <license>TODO: License declaration</license>

  # ROS2 package dependencies
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3</exec_depend>

  # Custom package dependencies
  <exec_depend>dora_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
