<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wheel_controller</name>
  <version>0.0.0</version>
  <description>A simple wheel controller for converting cmd_vel to wheel velocities</description>

  <maintainer email="your_email@example.com">your_name</maintainer>

  <license>Apache-2.0</license>

  <!-- Dependencies for building and running the package -->
  <buildtool_depend>ament_python</buildtool_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3</exec_depend>

  <test_depend>pytest</test_depend>

  <!-- Export section for build system configuration -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

